# animatch

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  com.holypangolin.Animatch.json  flatpak.json
data/: CMakeLists.txt  animatch.6  animatch.desktop  com.holypangolin.Animatch.appdata.xml  holypangolin.flac
data/fonts/: README
data/icons/: CMakeLists.txt  animatch.icns  icon.rc
data/levels/: 1.lvl  10.lvl  11.lvl  12.lvl  13.lvl  14.lvl  15.lvl  16.lvl  17.lvl  18.lvl  19.lvl  2.lvl  20.lvl  21.lvl  22.lvl  23.lvl  24.lvl  25.lvl  26.lvl  27.lvl  28.lvl  29.lvl  3.lvl  30.lvl  31.lvl  32.lvl  33.lvl  34.lvl  35.lvl  36.lvl  37.lvl  38.lvl  39.lvl  4.lvl  40.lvl  41.lvl  42.lvl  43.lvl  44.lvl  45.lvl  (+12 more)
data/shaders/: board.glsl  combine.glsl  desaturate.glsl  kawese.glsl  vertex.glsl
data/sprites/apple/: stand.ini  stand2.ini
data/sprites/bee/: anim.ini  blink.ini  eyeroll.ini  fly1.ini  fly2.ini  pszczolka_podstawa_otwarte.ini  pszczolka_podstawa_zamk.ini  pszczolka_rot_anim.ini  pszczolka_zamk_anim.ini
data/sprites/beetle/: beetle.ini
data/sprites/berry/: stand.ini
data/sprites/bg/: bg.ini  bottom.ini  top.ini
data/sprites/bird/: anim.ini  blink.ini  eyeroll.ini  ptaszek_oczy_otw_anim.ini  ptaszek_oczy_rot_anim.ini  ptaszek_oczy_zamk_anim.ini  ptaszek_podstawa_otwarte.ini  ptaszek_podstawa_zamk.ini  sing2.ini  stand.ini
data/sprites/cat/: action1.ini  action2.ini  action3.ini  blink.ini  kotek_dziubek_anim.ini  kotek_lot_anim.ini  kotek_podstawa_nosek.ini  kotek_podstawa_usmiechniety.ini  kotek_podstawa_zamk.ini  kotek_usmiech_anim.ini  stand.ini
data/sprites/chestnut/: stand.ini  stand2.ini  stand3.ini
data/sprites/cloud/: anim.ini  anim2.ini
data/sprites/cone/: stand.ini
data/sprites/dandelion/: stand.ini
data/sprites/egg/: stand.ini  stand2.ini
data/sprites/eyes/: eyes.ini
data/sprites/fish/: blink.ini  eyeroll.ini  rybka_otwarte_anim.ini  rybka_podstawa_otwarte.ini  rybka_podstawa_zamk.ini  rybka_rot_anim.ini  rybka_zamk_anim.ini  swim1.ini  swim2.ini
data/sprites/frog/: blink.ini  bump2.ini  eyeroll.ini  tonque1.ini  tonque2.ini  zabka_anim_cialko.ini  zabka_anim_lapki.ini  zabka_cialko_anim_zamk.ini  zabka_eyeroll.ini  zabka_jezyk_no_rev.ini  zabka_jezyk_rev.ini  zabka_jezyk_zamk_no_rev.ini  zabka_jezyk_zamk_rev.ini  zabka_lapki_anim_zamk.ini  zabka_podstawa_otwarte.ini  zabka_podstawa_zamk.ini
data/sprites/ladybug/: anim.ini  biedronka_calus_anim_no_rev.ini  biedronka_cialko_anim.ini  biedronka_lapki_anim.ini  biedronka_lot_anim.ini  biedronka_oczy_boki.ini  biedronka_oczy_gora_dol.ini  biedronka_podstawa_otwarte.ini  biedronka_podstawa_zamk.ini  blink.ini  bump2.ini  bump3.ini  eyeroll1.ini  eyeroll2.ini  kiss.ini
data/sprites/logo/: logo_blink.ini  logo_blink2.ini  logo_blink3.ini  logo_eyeroll.ini  logo_tonque.ini  logo_wave.ini
data/sprites/mushroom/: stand.ini
data/sprites/nest/: nest1.ini  nest2.ini  nest3.ini
data/sprites/snail/: scroll.ini  snail.ini
data/sprites/special/: bee.ini  fish.ini  frog.ini  ladybug.ini
data/sprites/strawberry/: stand.ini
data/sprites/super/: bird.ini  cat.ini
data/sprites/ui/: ui.ini
debian/: changelog  control  copyright  rules
debian/source/: options
flatpak/: 0001-wayland-ask-KDE-protocol-extension-to-use-server-sid.patch  0001-wayland-ask-xdg-decoration-protocol-extension-to-use.patch  0001-wayland-fix-resizing-and-fullscreen-toggling.patch  0002-wayland-ask-xdg-decoration-protocol-extension-to-use.patch  0003-wayland-fix-resizing-and-fullscreen-toggling.patch  0004-wayland-Send-SDL_TOUCH_MOUSEID-mouse-events-for-touc.patch  0005-WIP-HiDPI-support-on-Wayland.patch  0005-wayland-add-dummy-remove-handler-to-wl_registry_list.patch  0006-wayland-HiDPI-support.patch  com.holypangolin.Animatch.json
src/: CMakeLists.txt  common.c  common.h  main.c  scrollingviewport.c  scrollingviewport.h
src/gamestates/: CMakeLists.txt  dosowisko.c  example.c  game.c  holypangolin.c  loading.c  menu.c  settings.c
src/gamestates/game/: actions.c  debug.c  fields.c  game.h  levels.c  logic.c  scene.c  specials.c  view.c
