SET(DATADIR "${SHARE_INSTALL_PREFIX}/${LIBSUPERDERPY_GAMENAME}/data")

if(APPLE)
	SET(DATADIR "${BIN_INSTALL_DIR}/${LIBSUPERDERPY_GAMENAME}.app/Contents/Resources/data") #OMG NASTY
endif(APPLE)

add_subdirectory(icons)
if(UNIX AND NOT APPLE AND NOT EMSCRIPTEN AND NOT ANDROID)
	install(FILES ${LIBSUPERDERPY_GAMENAME}.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
        install(FILES ${LIBSUPERDERPY_APPID}.appdata.xml DESTINATION ${SHARE_INSTALL_PREFIX}/metainfo)
endif(UNIX AND NOT APPLE AND NOT EMSCRIPTEN AND NOT ANDROID)

install(DIRECTORY . DESTINATION ${DATADIR}
	PATTERN "stuff" EXCLUDE
	PATTERN ".git" EXCLUDE
	PATTERN ".gitignore" EXCLUDE
	PATTERN ".directory" EXCLUDE
	PATTERN "CMakeLists.txt" EXCLUDE)

file(GLOB_RECURSE RES_FILES *)
add_custom_target(data SOURCES ${RES_FILES})
