if(UNIX AND NOT APPLE AND NOT EMSCRIPTEN)
	install(FILES 16/${LIBSUPERDERPY_GAMENAME}.png DESTINATION ${ICON_INSTALL_DIR}/hicolor/16x16/apps)
	install(FILES 32/${LIBSUPERDERPY_GAMENAME}.png DESTINATION ${ICON_INSTALL_DIR}/hicolor/32x32/apps)
	install(FILES 48/${LIBSUPERDERPY_GAMENAME}.png DESTINATION ${ICON_INSTALL_DIR}/hicolor/48x48/apps)
	install(FILES 64/${LIBSUPERDERPY_GAMENAME}.png DESTINATION ${ICON_INSTALL_DIR}/hicolor/64x64/apps)
	install(FILES 128/${LIBSUPERDERPY_GAMENAME}.png DESTINATION ${ICON_INSTALL_DIR}/hicolor/128x128/apps)
	install(FILES 256/${LIBSUPERDERPY_GAMENAME}.png DESTINATION ${ICON_INSTALL_DIR}/hicolor/256x256/apps)
	if(EXISTS ${LIBSUPERDERPY_GAMENAME}.svg)
		install(FILES ${LIBSUPERDERPY_GAMENAME}.svg DESTINATION ${ICON_INSTALL_DIR}/hicolor/scalable/apps)
	endif(EXISTS ${LIBSUPERDERPY_GAMENAME}.svg)
endif(UNIX AND NOT APPLE AND NOT EMSCRIPTEN)
install(FILES ${LIBSUPERDERPY_GAMENAME}.png DESTINATION ${DATADIR}/icons)
